partial fix of topic title word-wrap in topic list

--- a/src/stylesheets/components/pages/_topicList.scss
+++ b/src/stylesheets/components/pages/_topicList.scss
@@ -10,9 +10,8 @@
   //breadcrumb navigation
   .breadcrumbs{
     list-style-type: none;
+    margin: 5px 5px 5px 0px;
     padding-left: 0px;
-    margin: 5px;
-    margin-left: 0px;
 
     li{
       font-size: 12px;
@@ -40,7 +39,6 @@
     width: 100%;
     border-collapse: collapse;
     color: $topicList-table-td-font-color;
-
 
     thead tr{
       background-color: $topicList-table-border-color;
@@ -95,17 +93,16 @@
     }
     //for desktop screens
     @media (min-width: $desktop-min){
-      .topic-head{
-        .topic{
-          padding-left: 5px;
-        }
+      .topic-head .topic{
+        padding-left: 5px;
       }
       .topic-panel{
         height: 30px;
 
         .topic{
+          display: inline-block;
           width: 60%;
-          padding-left: 5px;
+          padding: 5px;
           font-size: 12px;
           font-weight: bold;
           overflow-wrap: break-word;
@@ -120,7 +117,7 @@
           }
         }
         .creator, .posts, .date{
-          width: 13%;
+          width: 15%;
           font-size: 12px;
         }
         .date{
@@ -136,6 +133,7 @@
     color: $topicList-new-topic-font-color;
     font-size: 12px;
     text-decoration: none;
+    margin-top: 5px;
     padding: 4px;
   }
 }
