--- a/src/stylesheets/components/partials/_post.scss
+++ b/src/stylesheets/components/partials/_post.scss
@@ -1,5 +1,5 @@
 //post
-#post{
+.post{
   border: 1px solid $topic-border-color;
 
   .header{
